--- a/Project1/style.css
+++ b/Project1/style.css
@@ -10,7 +10,7 @@
 
 /* Hero Section */
 .hero {
-    background-image: url('images/kyoto.jpg');
+    background-image: url('Images/kyoto.jpg');
     background-size: cover;
     background-position: center;
     color: white;
