--- a/Project1/style.css
+++ b/Project1/style.css
@@ -10,7 +10,7 @@
 
 /* Hero Section */
 .hero {
-    background-image: src="kyoto.jpg" alt="Kyoto Project;
+    background-image: src="Images/kyoto.jpeg";
     background-size: cover;
     background-position: center;
     color: white;
